# Zephyr

./: CMakeLists.txt  CMakeLists.txt.jgHFpL  README.md  main.cpp
Architectural Design/: Class Diagram.asta
Requirement Analysis/: Usecase Diagram.asta
Zephyr-Deb/: Zephyr.deb
Zephyr-Deb/Zephyr/DEBIAN/: control
Zephyr-Deb/Zephyr/usr/share/applications/: .desktop
qml/: Main.qml  Tab.qml  Terminal.qml  qml.qrc
src/: command.cpp  command.h  commandhandler.cpp  commandhandler.h  main.cpp
